--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,5 +1,4 @@
-name: Unit tests
-
+name: Lint
 on:
   push:
     paths-ignore:
@@ -7,9 +6,8 @@ on:
   pull_request:
     paths-ignore:
       - '*.md'
-
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -18,7 +16,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          cache: 'npm'
+          cache-dependency-path: package.json
       - name: Install dependencies
         run: npm install
-      - name: Run tests
-        run: npm test
+        env:
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      - name: Run lint
+        run: npm run lint
