--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "devDependencies": {
     "@apollo/server": "^4.11.0",
     "@as-integrations/fastify": "^2.1.1",
-    "@treedom/opa-client-sdk": "^3.1.2",
+    "@styra/opa": "^1.5.0",
+    "@treedom/opa-client-sdk": "^3.2.0",
     "@types/node": "20.14.0",
     "@types/sinon": "17.0.3",
     "@typescript-eslint/eslint-plugin": "7.12.0",
